fixed alignment

--- a/Movie Search React/src/App.css
+++ b/Movie Search React/src/App.css
@@ -39,13 +39,23 @@ ul.movie-list{
     align-self: center;
     align-items: baseline;
    flex-wrap: wrap;
-    justify-content: center;
-    padding: 0;
-
+    justify-content: left;
+    justify-self: center;
     text-wrap: normal;
     text-align: center;
     border-radius: 10px;
 
+
+}
+
+.list-container {
+    justify-content: center;
+    justify-items: center;
+    justify-self: center;
+    align-content: center;
+    align-items: center;
+    padding-left: 20px;
+    padding-bottom:20px;
 
 }
 
